# yc-speechkit-transcoder

./: .gitignore  .gitmodules  LICENSE  README.md
src/: CMakeLists.txt
transcoder/: CMakeLists.txt  CMakeSettings.json  Dockerfile
transcoder/adoption-toolkit/: Dockerfile.base  build.cmd  build.sh
transcoder/sk-transcoder/: CMakeLists.txt  CMakeSettings.json  sk-discoverer.cpp  sk-discoverer.h  sk-transcoder.cpp  sk-transcoder.h
transcoder/speechkit-tts-gst-plugin/src/: CMakeLists.txt  config.h
